name: redissession
version: 0.0.0.1
license: BSD3
license-file: LICENSE
author: Tom Streller
maintainer: Tom Streller
synopsis: Redis-Powered Sessions for Haskell
category: Database
stability: experimental
cabal-version: >= 1.18
build-type: Simple
homepage: https://github.com/scan/redissession
source-repository head
  type: git
  location: https://scan@github.com/scan/redissession.git

library
  build-depends:  base                >= 4        &&  < 5
                , time                >= 1.4.0.1  &&  < 1.5
                , bytestring          >= 0.9      &&  < 0.11
                , text                >= 0.11.3.1 &&  < 0.12
                , redis               >= 0.13
                , cookie              >= 0.4.0.1  &&  < 0.5
                , binary              >= 0.7.1    &&  < 0.8
                , pool-conduit        >= 0.1.2.1  &&  < 0.2
                , entropy             >= 0.2.2.4  &&  < 0.3
                , pureMD5
                , yesod-core          >= 1.2.7    &&  < 1.3
                , wai                 >= 2.1.0    &&  < 2.2

  exposed-modules:  Web.RedisSession
                  , Yesod.Session.Redis
